<resources>
    <string name="app_name">롤 알리미</string>
    <string name="channel_name">notify</string>
    <string name="channel_des">notify channel</string>
    <string name="API_KEY">RGAPI-02a2f70a-47bc-4ed6-bd50-688f9dd41866</string>
    <string name="input_your_key">input your_key</string>
    <string name="key">Key 변경</string>
    <string name="add">등록/삭제</string>
    <string name="service_switch">Service</string>
    <string name="issue_key">KEY 발급</string>
    <string name="add_remove">사용자 등록/삭제</string>
    <string name="change_key">API 키 변경</string>
</resources>
