<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/menu_top">

        <item
            android:id="@+id/add_remove"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/add_remove" />
        <item
            android:id="@+id/change_key"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/change_key" />
    </group>

    <group
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/issue_key"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/issue_key" />
    </group>

    <item
        android:id="@+id/nav_switch"
        android:title="Service"
        app:actionLayout="@layout/layout_switch"
        app:showAsAction="always"
        />

</menu>